Adiciona 3 dias de eventos

--- a/app/views/index/sections/_enrollment.html.erb
+++ b/app/views/index/sections/_enrollment.html.erb
@@ -51,7 +51,7 @@
         </div>
         <div class="extra content">
           <i class="check icon"></i>
-          121 Inscritos
+          <%= pluralize @users_cat_1, 'Inscrito', 'Inscritos' %>
         </div>
       </div>
 
@@ -94,7 +94,7 @@
         </div>
         <div class="extra content">
           <i class="check icon"></i>
-          121 Inscritos
+          <%= pluralize @users_cat_2, 'Inscrito', 'Inscritos' %>
         </div>
       </div>
 
@@ -137,7 +137,7 @@
         </div>
         <div class="extra content">
           <i class="check icon"></i>
-          121 Inscritos
+          <%= pluralize @users_cat_3, 'Inscrito', 'Inscritos' %>
         </div>
       </div>
 
