--- a/app/views/index/sections/_schedule.html.erb
+++ b/app/views/index/sections/_schedule.html.erb
@@ -59,242 +59,11 @@
         <!-- First level content start -->
         <div class="tab-content">
 
-          <!-- Day 1 content start -->
-          <div id="schedule-day-1" class="tab-pane active">
+          <%= render 'index/sections/schedule_days/day_1' %>
 
-            <!-- Second level content start -->
-            <div class="tab-content tab-content-schedule">
+          <%= render 'index/sections/schedule_days/day_2' %>
 
-              <!-- Main content start -->
-              <div class="tab-pane active">
-
-                <!-- Accordion start -->
-                <div class="panel-group">
-
-                  <% 5.times do %>
-                    <div class="panel schedule-item">
-                      <div class="lecture-icon-wrapper">
-                        <!-- <i class="fab fa-bitcoin text-dark"></i> -->
-                        <%= image_tag 'speakers/speaker1.jpg', class: 'img-responsive', width: '100%' %>
-                      </div>
-                      <div>
-                        <strong class="time highlight">
-                          <i class="icon-clock text-dark"></i> 2:20 PM
-                        </strong>
-                        <h4>
-                          How to organize great events day 1
-                        </h4>
-                      </div>
-                      <div class="schedule-item-body">
-                        <article>
-                          <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.</p>
-                          <strong class="highlight speaker-name">Michael Lambert</strong>
-                        </article>
-                        <div class="ui divider"></div>
-                      </div>
-                    </div>
-                  <% end %>
-
-                </div>
-                <!-- Accordion end -->
-
-              </div>
-              <!-- Main content end -->
-
-            </div>
-            <!-- Second level content end -->
-
-          </div>
-          <!-- Day 1 content end -->
-
-          <!-- Day 2 content start -->
-          <div id="schedule-day-2" class="tab-pane">
-
-            <!-- Second level content start -->
-            <div class="tab-content tab-content-schedule">
-
-              <!-- Main content start -->
-              <div class="tab-pane">
-
-                <!-- Accordion start -->
-                <div class="panel-group">
-
-                  <% 5.times do %>
-                    <div class="panel schedule-item">
-                      <div class="lecture-icon-wrapper">
-                        <!-- <i class="fab fa-bitcoin text-dark"></i> -->
-                        <%= image_tag 'speakers/speaker2.jpg', class: 'img-responsive', width: '100%' %>
-                      </div>
-                      <div>
-                        <strong class="time highlight">
-                          <i class="icon-clock text-dark"></i> 2:20 PM</strong>
-                        <h4>
-                          How to organize great events day 2
-                        </h4>
-                      </div>
-                      <div class="schedule-item-body">
-                        <article>
-                          <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.</p>
-                          <strong class="highlight speaker-name">Michael Lambert</strong>
-                        </article>
-                        <div class="ui divider"></div>
-                      </div>
-                    </div>
-                  <% end %>
-
-                </div>
-                <!-- Accordion end -->
-
-              </div>
-              <!-- Main content end -->
-
-            </div>
-            <!-- Second level content end -->
-
-          </div>
-          <!-- Day 2 content end -->
-
-          <!-- Day 3 content start -->
-          <div id="schedule-day-3" class="tab-pane">
-
-            <!-- Second level content start -->
-            <div class="tab-content tab-content-schedule">
-
-              <!-- Main content start -->
-              <div class="tab-pane">
-
-                <!-- Accordion start -->
-                <div class="panel-group">
-
-                  <% 5.times do %>
-                    <div class="panel schedule-item">
-                      <div class="lecture-icon-wrapper">
-                        <!-- <i class="fab fa-bitcoin text-dark"></i> -->
-                        <%= image_tag 'speakers/speaker3.jpg', class: 'img-responsive', width: '100%' %>
-                      </div>
-                      <div>
-                        <strong class="time highlight">
-                          <i class="icon-clock text-dark"></i> 2:20 PM</strong>
-                        <h4>
-                          How to organize great events day 3
-                        </h4>
-                      </div>
-                      <div class="schedule-item-body">
-                        <article>
-                          <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.</p>
-                          <strong class="highlight speaker-name">Michael Lambert</strong>
-                        </article>
-                        <div class="ui divider"></div>
-                      </div>
-                    </div>
-                  <% end %>
-
-                </div>
-                <!-- Accordion end -->
-
-              </div>
-              <!-- Main content end -->
-
-            </div>
-            <!-- Second level content end -->
-
-          </div>
-          <!-- Day 3 content end -->
-
-          <!-- Day 4 content start -->
-          <div id="schedule-day-4" class="tab-pane">
-
-            <!-- Second level content start -->
-            <div class="tab-content tab-content-schedule">
-
-              <!-- Main content start -->
-              <div class="tab-pane">
-
-                <!-- Accordion start -->
-                <div class="panel-group">
-
-                  <% 5.times do %>
-                    <div class="panel schedule-item">
-                      <div class="lecture-icon-wrapper">
-                        <!-- <i class="fab fa-bitcoin text-dark"></i> -->
-                        <%= image_tag 'speakers/speaker3.jpg', class: 'img-responsive', width: '100%' %>
-                      </div>
-                      <div>
-                        <strong class="time highlight">
-                          <i class="icon-clock text-dark"></i> 2:20 PM</strong>
-                        <h4>
-                          How to organize great events day 3
-                        </h4>
-                      </div>
-                      <div class="schedule-item-body">
-                        <article>
-                          <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.</p>
-                          <strong class="highlight speaker-name">Michael Lambert</strong>
-                        </article>
-                        <div class="ui divider"></div>
-                      </div>
-                    </div>
-                  <% end %>
-
-                </div>
-                <!-- Accordion end -->
-
-              </div>
-              <!-- Main content end -->
-
-            </div>
-            <!-- Second level content end -->
-
-          </div>
-          <!-- Day 4 content end -->
-
-          <!-- Day 5 content start -->
-          <div id="schedule-day-5" class="tab-pane">
-
-            <!-- Second level content start -->
-            <div class="tab-content tab-content-schedule">
-
-              <!-- Main content start -->
-              <div class="tab-pane">
-
-                <!-- Accordion start -->
-                <div class="panel-group">
-
-                  <% 5.times do %>
-                    <div class="panel schedule-item">
-                      <div class="lecture-icon-wrapper">
-                        <!-- <i class="fab fa-bitcoin text-dark"></i> -->
-                        <%= image_tag 'speakers/speaker3.jpg', class: 'img-responsive', width: '100%' %>
-                      </div>
-                      <div>
-                        <strong class="time highlight">
-                          <i class="icon-clock text-dark"></i> 2:20 PM</strong>
-                        <h4>
-                          How to organize great events day 3
-                        </h4>
-                      </div>
-                      <div class="schedule-item-body">
-                        <article>
-                          <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.</p>
-                          <strong class="highlight speaker-name">Michael Lambert</strong>
-                        </article>
-                        <div class="ui divider"></div>
-                      </div>
-                    </div>
-                  <% end %>
-
-                </div>
-                <!-- Accordion end -->
-
-              </div>
-              <!-- Main content end -->
-
-            </div>
-            <!-- Second level content end -->
-
-          </div>
-          <!-- Day 5 content end -->
-
+          <%= render 'index/sections/schedule_days/day_3' %>
 
         </div>
         <!-- First level content end -->
