Ajustes da agenda de atividades e palestras semana acadêmica

--- a/app/views/index/_footer.html.erb
+++ b/app/views/index/_footer.html.erb
@@ -4,8 +4,8 @@
     <div class="column">
       <ul class="footer-nav">
         <li class="footer-nav-item">
-          <a href="https://www.facebook.com/groups/CACCUFFSCCO/" target="_blank">
-            Centro acadêmico
+          <a href="https://caccuffs.github.io" target="_blank">
+            Centro acadêmico Ciência da Computação - CACC UFFS
           </a>
         </li>
       </ul>
