--- a/app/views/index/sections/_about.html.erb
+++ b/app/views/index/sections/_about.html.erb
@@ -4,7 +4,7 @@
     <div class="content">
       Sobre a Semana Acadêmica
       <div class="sub header">
-        21 a 24 de outubro de 2018
+        de 19 à 23 de Novembro de 2018
       </div>
     </div>
   </h1>
