--- a/app/views/index/sections/_schedule.html.erb
+++ b/app/views/index/sections/_schedule.html.erb
@@ -24,32 +24,32 @@
           <ul class="nav nav-schedule">
             <li class="active">
               <a href="#schedule-day-1">
-                <h5 class="highlight">O que é ser um Cientista da Computação</h5>
-                <p class="text-alt">19/1/2018</p>
+                <h5 class="highlight">O que é ser um Cientista da Computação?</h5>
+                <p class="text-alt">19/11/2018</p>
               </a>
             </li>
             <li class="">
               <a href="#schedule-day-2">
-                <h5 class="highlight">UFFS e a Ciência da Computação</h5>
-                <p class="text-alt">20/1/2018</p>
+                <h5 class="highlight">Como a UFFS contribuição com a Ciência da Computação?</h5>
+                <p class="text-alt">20/11/2018</p>
               </a>
             </li>
             <li class="">
               <a href="#schedule-day-3">
                 <h5 class="highlight">Dia da Computação Multidisciplinar</h5>
-                <p class="text-alt">21/1/2018</p>
+                <p class="text-alt">21/11/2018</p>
               </a>
             </li>
             <li class="">
               <a href="#schedule-day-4">
-                <h5 class="highlight">Mercado de Trabalho Profissional de T.I.</h5>
-                <p class="text-alt">22/1/2018</p>
+                <h5 class="highlight">Mercado de Trabalho e Computação.</h5>
+                <p class="text-alt">22/11/2018</p>
               </a>
             </li>
             <li class="">
               <a href="#schedule-day-5">
-                <h5 class="highlight">Mulheres na área da Computação</h5>
-                <p class="text-alt">23/1/2018</p>
+                <h5 class="highlight">Mulheres, Computação e Técnologia</h5>
+                <p class="text-alt">23/11/2018</p>
               </a>
             </li>
           </ul>
@@ -64,6 +64,10 @@
           <%= render 'index/sections/schedule_days/day_2' %>
 
           <%= render 'index/sections/schedule_days/day_3' %>
+
+          <%= render 'index/sections/schedule_days/day_4' %>
+
+          <%= render 'index/sections/schedule_days/day_5' %>
 
         </div>
         <!-- First level content end -->
