--- a/app/views/index/sections/_speakers.html.erb
+++ b/app/views/index/sections/_speakers.html.erb
@@ -70,7 +70,7 @@
         <%= image_tag "speakers/guilherme.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
-            <span class="speaker-name">Prof Guilherme Dal Bianco</span>
+            <span class="speaker-name">Profº Guilherme Dal Bianco</span>
             <div class="sub header"></div>
           </div>
         </h4>
@@ -132,7 +132,6 @@
           <div class="content">
             <span class="speaker-name">Gabriel Ferreira</span>
             <div class="sub header">
-                Desenvolvedor e  Instrutor da Alura Cursos Online
             </div>
           </div>
         </h4>
@@ -158,7 +157,17 @@
         </h4>
       </div>
 
-      <div class="column">
+       <div class="column">
+        <%= image_tag "speakers/paulobuker.jpg", class: 'ui circular medium centered image' %>
+        <h4 class="ui centered speaker header">
+          <div class="content">
+            <span class="speaker-name">Paulo Buker</span>
+            <div class="sub header"></div>
+          </div>
+        </h4>
+      </div>
+
+      <!-- <div class="column">
         <%#= image_tag "speakers/braulio.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -166,7 +175,7 @@
             <div class="sub header"></div>
           </div>
         </h4>
-      </div>
+      </div> -->
 
     </div>
   </div>
