--- a/app/views/index/sections/schedule_days/_day_3.html.erb
+++ b/app/views/index/sections/schedule_days/_day_3.html.erb
@@ -1,4 +1,4 @@
-<div id="schedule-day-3" class="tab-pane">
+<div id="schedule-day-3" class="tab-pane ">
   <!-- Second level content start -->
   <div class="tab-content tab-content-schedule">
     <!-- Main content start -->
@@ -14,10 +14,11 @@
 
         <%= render 'index/sections/schedule_days/template',
           image: image_tag('speakers/grazi.jpg', class: 'img-responsive', width: '100%'),
-          speaker: 'Graziela Tonin',
+          speaker: 'Profª Graziela Tonin',
           title: 'Dívida técnica',
           time: '13:30 - 15:00',
-          place: ''
+          place: 'Auditório bloco B',
+          descricao: 'Dívida técnica é a soma de alguns tipos de pendências no seu projeto que podem impedir a evolução do mesmo. Entretanto, esse conceito é muito mais abrangente do que isso, por isso a Profº Grazilea Tonin irá esclarecer melhor sobre esse assunto.'
         %>
 
         <!-- =============================================================================== -->
@@ -35,16 +36,18 @@
           image: image_tag('speakers/jaenisch.jpg', class: 'img-responsive', width: '100%'),
           speaker: 'Lucas Jaenisch',
           title: 'Oficina de modelagem 3D',
-          time: '19:00 - 20:30',
-          place: '404 B'
+          time: '19:00 - 22:00',
+          place: 'LAB 404 B',
+          descricao: 'Aprenda a arte de criar objetos 3D'
         %>
 
         <%= render 'index/sections/schedule_days/template',
-          image: image_tag('speakers/jaenisch.jpg', class: 'img-responsive', width: '100%'),
-          speaker: 'Lucas Jaenisch',
-          title: 'Oficina de modelagem 3D',
-          time: '21:00 - 22:30',
-          place: '404 B'
+          image: image_tag('speakers/galli.jpg', class: 'img-responsive', width: '100%'),
+          speaker: 'Gabriel Galli',
+          title: 'Workshop Latex',
+          time: '19:00 - 20:30',
+          place: 'LAB 402 B',
+          descricao: 'Sem mais sufoco para formatações de trabalhos, articos, monografias e muitos mais com essa ferramenta PODEROSSÍMA!'
         %>
 
         <!-- =============================================================================== -->
@@ -58,29 +61,14 @@
           </div>
         </div>
 
-        <%= render 'index/sections/schedule_days/template',
+        <!-- <%= render 'index/sections/schedule_days/template',
           image: image_tag('speakers/denioduarte.jpg', class: 'img-responsive', width: '100%'),
-          speaker: 'Denio Duarte',
+          speaker: 'Profº Denio Duarte',
           title: 'Cinedebate: Big Data e o Poder da Informação',
           time: '15:30 - 17:00',
-          place: '401 B'
-        %>
-
-        <%= render 'index/sections/schedule_days/template',
-          image: image_tag('speakers/galli.jpg', class: 'img-responsive', width: '100%'),
-          speaker: 'Gabriel Galli',
-          title: 'Workshop Latex',
-          time: '19:00 - 20:30',
-          place: '402 B'
-        %>
-
-        <%= render 'index/sections/schedule_days/template',
-          image: image_tag('speakers/galli.jpg', class: 'img-responsive', width: '100%'),
-          speaker: 'Gabriel Galli',
-          title: 'Workshop Latex',
-          time: '21:00 - 22:30',
-          place: '402 B'
-        %>
+          place: 'SALA 401 B',
+          descricao: 'Devemos nos preocupar com informações das nossas vidas expostas online? A matemática Hannah Fry desvenda o big data. E explica de forma simples e bem-humorada essa alta tecnologia que captura, armazena e compartilha tudo que fazemos no mundo virtual. A história começa com Claude Shannon, que, para acabar com os ruídos das linhas telefônicas, digitalizou o processo e criou a "Era da Informação.'
+        %> -->
 
       </div>
       <!-- Accordion end -->
