--- a/app/views/index/sections/schedule_days/_template.html.erb
+++ b/app/views/index/sections/schedule_days/_template.html.erb
@@ -14,7 +14,7 @@
     <article>
 
       <p class="description">
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type.
+        <%= descricao %>
       </p>
       <strong class="highlight speaker-name">
         Palestrante: <%= speaker %>
