--- a/app/views/index/sections/_enrollment.html.erb
+++ b/app/views/index/sections/_enrollment.html.erb
@@ -1,5 +1,5 @@
 <section class="section enrollment" id="inscricao">
-  <h1 class="ui icon center aligned inverted header">
+  <h1 class="ui icon center aligned inverted header" data-scroll>
     <i class="icon-pencil"></i>
     <div class="content">
       Inscrição
@@ -10,7 +10,7 @@
   </h1>
 
   <div class="container">
-    <div class="ui three stackable cards transparent-back">
+    <div class="ui three stackable cards transparent-back" data-scroll>
 
       <div class="ui raised card">
         <div class="image">
