--- a/app/views/index/sections/_speakers.html.erb
+++ b/app/views/index/sections/_speakers.html.erb
@@ -1,5 +1,5 @@
 <section class="section speakers" id="convidados">
-  <h1 class="ui icon center aligned header">
+  <h1 class="ui icon center aligned header" data-scroll>
     <i class="icon-microphone text-primary"></i>
     <div class="content">
       Palestrantes
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="ui stackable three column centered grid">
 
-      <div class="column">
+      <div class="column" data-scroll>
         <%= image_tag "speakers/fronteiratec.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -26,7 +26,7 @@
         </h4>
       </div>
 
-      <div class="column">
+      <div class="column" data-scroll>
         <%= image_tag "speakers/denioduarte.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -36,7 +36,7 @@
         </h4>
       </div>
 
-      <div class="column">
+      <div class="column" data-scroll>
         <%= image_tag "speakers/tomkelski.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -46,7 +46,7 @@
         </h4>
       </div>
 
-      <div class="column">
+      <div class="column" data-scroll>
         <%= image_tag "speakers/emilio.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -56,7 +56,7 @@
         </h4>
       </div>
 
-      <div class="column">
+      <div class="column" data-scroll>
         <%= image_tag "speakers/raquel.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -66,7 +66,7 @@
         </h4>
       </div>
 
-      <div class="column">
+      <div class="column" data-scroll>
         <%= image_tag "speakers/guilherme.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -76,7 +76,7 @@
         </h4>
       </div>
 
-      <div class="column">
+      <div class="column" data-scroll>
         <%= image_tag "speakers/becker.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -86,7 +86,7 @@
         </h4>
       </div>
 
-      <div class="column">
+      <div class="column" data-scroll>
         <%= image_tag "speakers/raphael.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -96,7 +96,7 @@
         </h4>
       </div>
 
-      <div class="column">
+      <div class="column" data-scroll>
         <%= image_tag "speakers/grazi.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -106,7 +106,7 @@
         </h4>
       </div>
 
-      <div class="column">
+      <div class="column" data-scroll>
         <%= image_tag "speakers/jaenisch.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -116,7 +116,7 @@
         </h4>
       </div>
 
-      <div class="column">
+      <div class="column" data-scroll>
         <%= image_tag "speakers/galli.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -126,7 +126,7 @@
         </h4>
       </div>
 
-      <div class="column">
+      <div class="column" data-scroll>
         <%= image_tag "speakers/gabrielAlura.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -137,7 +137,7 @@
         </h4>
       </div>
 
-      <div class="column">
+      <div class="column" data-scroll>
         <%= image_tag "speakers/luan.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -147,7 +147,7 @@
         </h4>
       </div>
 
-       <div class="column">
+       <div class="column" data-scroll>
         <%= image_tag "speakers/amanda.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -157,7 +157,7 @@
         </h4>
       </div>
 
-       <div class="column">
+       <div class="column" data-scroll>
         <%= image_tag "speakers/paulobuker.jpg", class: 'ui circular medium centered image' %>
         <h4 class="ui centered speaker header">
           <div class="content">
@@ -166,16 +166,6 @@
           </div>
         </h4>
       </div>
-
-      <!-- <div class="column">
-        <%#= image_tag "speakers/braulio.jpg", class: 'ui circular medium centered image' %>
-        <h4 class="ui centered speaker header">
-          <div class="content">
-            <span class="speaker-name">Profº Braulio</span>
-            <div class="sub header"></div>
-          </div>
-        </h4>
-      </div> -->
 
     </div>
   </div>
