--- a/app/views/index/sections/_about.html.erb
+++ b/app/views/index/sections/_about.html.erb
@@ -1,5 +1,5 @@
 <section class="section about" id="sobre">
-  <h1 class="ui icon center aligned header">
+  <h1 class="ui icon center aligned header" data-scroll>
     <i class="icon-info text-primary"></i>
     <div class="content">
       Sobre a Semana Acadêmica
@@ -9,7 +9,7 @@
     </div>
   </h1>
 
-  <div class="container">
+  <div class="container" data-scroll>
     <div class="ui stackable fluid three item borderless secondary pointing menu">
       <a class="item active" data-tab="info">
         <i class="icon-info"></i> Informações
