--- a/app/views/index/sections/_schedule.html.erb
+++ b/app/views/index/sections/_schedule.html.erb
@@ -1,5 +1,5 @@
 <section class="section schedule" id="agenda">
-  <h1 class="ui icon center aligned header">
+  <h1 class="ui icon center aligned header" data-scroll>
     <i class="icon-calendar text-primary"></i>
     <div class="content">
       Agenda
